--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>One Million Lines</title>
 
     <!-- This is where I put the google Arvo font and font-awesome -->
     <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
     
   </head>
 
-  <body>
+  <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -44,11 +44,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="images/one_million_top_logo.png" alt="One Million Lines" title="One Million Lines"></a>
+          <a class="navbar-brand" href="#jumbotron"><img src="images/one_million_top_logo.png" alt="One Million Lines" title="One Million Lines"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="example.html">WHO WE ARE</a></li>
+            <li><a href="#who">WHO WE ARE</a></li>
             <li><a href="#get-involved">GET INVOLVED</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
@@ -56,21 +56,42 @@
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron" id="jumbotron">
       <div class="container">
         <h1>Our goal is to inspire <br>Tallahassee to write 1,000,000<br> lines of code_</h1>
         <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by <strong>CODE.org</strong>. Millions of lines of code are being written. In the capital of Florida, Tallahassee, the community is taking the challenge and our goal is to write 1,000,000 lines of code_</p>
-        <p><a class="btn btn-danger btn-lg" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-danger btn-lg" role="button" data-toggle="modal" data-target="#myModal">Learn more &raquo;</a></p>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+            ...
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
         <p><img src="images/code.png" alt="code.org" title="display when scrolling over"></p>
       </div>
     </div>
-
+  <div id="who">
     <div class="container homepage">
       <p><img src="images/academy_brand_med.png" alt="Massive Academy" title="Massive Academy"></p>
       <h2>Who we are</h2>
       <p class="line"></p>
       <p>We are MASSIVE Academy. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
     </div>
+  </div>
 
     <div id="get-involved">
       <div class="container homepage">
@@ -113,6 +134,8 @@
       <div class="container">
         <img src="images/bottom_brand.png" title="One Million Lines">
       </div>  
+      <div id="back-to-top">
+      <a href="#jumbotron"><i class="fa fa-chevron-circle-up fa-3x"></i></a>
     </footer>
       
 
@@ -121,6 +144,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
   </body>
 </html>
