--- a/academic/index.html
+++ b/academic/index.html
@@ -20,7 +20,7 @@
   <body>
 
   <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Marcus Schultz-Bergin</a>
+          <a class="navbar-brand" href="index.html">Marcus Schultz-Bergin</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -46,12 +46,17 @@
   <!-- Begin Content -->
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12 title-buffer">
         </div>
-        <div class="col-md-4">
-          <h1 class="page-title">Welcome to My Site</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-8">
+          <h1 class="page-title">Welcome</h1>
+          <h3>I am a philosophy graduate student at Bowling Green State University, focusing on animal ethics and political philosophy. Here, I store information on the courses I teach and the research I undertake, as well as a blog of various musings.</h3>
+        </div>
+        <div class="col-md-2">
         </div>
       </div>
     </div>
