Teaching and Research done
New style for pages. Teaching and Research done, stylistically (still
need some content)

--- a/academic/teaching.html
+++ b/academic/teaching.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marcus Schultz-Bergin :: Teaching</title>
+    <title>In the Cave :: Teaching</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Marcus Schultz-Bergin</a>
+          <a class="navbar-brand" href="index.html">In the Cave</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -50,60 +50,80 @@
           <h1 class="page-title">My Teaching</h1>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-1">
-        </div>
-        <div class="col-md-10 content">
-          <!-- tabs left -->
-          <div class="tabbable tabs-left">
-            <ul class="nav nav-tabs">
-              <li class="active"><a href="#f" data-toggle="tab">General Resources</a></li>
-              <li><a href="#a" data-toggle="tab">Intro to Philosophy</a></li>
-              <li><a href="#b" data-toggle="tab">Intro to Ethics</a></li>
-              <li><a href="#c" data-toggle="tab">Medical Ethics</a></li>
-              <li><a href="#d" data-toggle="tab">Philosophy of Law</a></li>
-              <li><a href="#e" data-toggle="tab">Computers and Philosophy</a></li>
-            </ul>
-            <div class="tab-content">
-            <div class="tab-pane active" id="f">
-              <p class="content-title">General Resources</p>
-              <h4>Below are some general teaching and learning resources, applicable to most courses I teach</h4>
-              <h5>Helpful Guides</h5>
-              <p><a href="docs/readingguide.pdf">Critical Reading Guide</a></p>
-              <p><a href="docs/exmarkup.pdf">Example Markup</a></p>
-              <p><a href="docs/howtowrite.pdf">How to Write a Philosophy Paper</a></p>
-              <hr />
-              <h5>Multimedia Resources</h5>
-              <p><a href="https://www.youtube.com/channel/UC6iv0okcmK2RQndkcHoKh8g/playlists" target="_blank">My YouTube Channel</a></p>
-              <p><a href="https://www.youtube.com/channel/UC2PA-AKmVpU6NKCGtZq_rKQ" target="_blank">Philosophy Tube</a></p>
-              <p><a href="https://www.youtube.com/channel/UCNGdqrH7APgOdHaiWiDp7Ng" target="_blank">Total Philosophy</a></p>
-              <p><a href="https://www.youtube.com/channel/UCSg1Bd8SoPK-F6kWvzwEnSQ" target="_blank">CollegeBinary, creator of 3-Minute-Philosophy</a></p>
-              <hr />
-              <h5>Further Reading</h5>
-              <p><a href="http://plato.stanford.edu" target="_blank">Stanford Encyclopedia of Philosophy</a></p>
-            </div>
-            <div class="tab-pane" id="a">
-              <p class="content-title">Introduction to Philosophy</p>
-              <h4>An Introduction to 'Big Questions' in Philosophy, like how do we gain knowledge and do we have free will?</h4>
-              <p>Syllabus</p>
-            </div>
-            <div class="tab-pane" id="b">
-              <p class="content-title">Introduction to Ethics</p>
-              <h4>An Introduction to the Philosophical Study of Morality. Questions investigated include what makes right acts right? Is there truth in morality? Is the truth in morality objective? We also investigate specific moral issues, such as our moral relationship with animals</h4>
-              <p>Syllabus</p>
-            </div>
-            <div class="tab-pane" id="c">Thirdamuno, ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae. </div>
-            <div class="tab-pane" id="d">Fourth tab.</div>
-            <div class="tab-pane" id="e">Fifth tab.</div>
+      <div class="row"><!-- Navigation Buttons -->
+      <div class="col-md-2">
+        <ul class="nav nav-tabs nav-stacked" id="myTabs">
+          <li class="active"><a href="#resources" data-toggle="tab">General Resources</a></li>
+          <li><a href="#introphil" data-toggle="tab">Introduction to Philosophy</a></li>
+          <li><a href="#introethics" data-toggle="tab">Introduction to Ethics</a></li>
+          <li><a href="#medethics" data-toggle="tab">Medical Ethics</a></li>
+          <li><a href="#phillaw" data-toggle="tab">Philosophy of Law</a></li>
+          <li><a href="#compphil" data-toggle="tab">Computers and Philosophy</a></li>
+        </ul>
+      </div>
+
+      <!-- Content -->
+      <div class="col-md-8">
+        <div class="tab-content">
+          <div class="tab-pane fade in active" id="resources">
+            <p class="content-title">General Resources</p>
+            <h4>Below are various general teaching and learning resources I have put together or stumbled upon. These are applicable to most courses I teach.</h4>
+            <hr class="bold" />
+            <div class="arrow-down"></div>
+            <h6 class="h5">Helpful Guides</h6>
+            <p>Critical Reading Guide</p>
+            <p>Example Markup</p>
+            <p>How to Write a Philosophy Paper</p>
+            <hr class="short" />
+            <h6 class="h5">Multimedia Resources</h6>
+            <p>My YouTube Channel</p>
+            <p>Philosophy Tube</p>
+            <p>Total Philosophy</p>
+            <p>CollegeBinary, creator of 3-Minute Philosophy</p>
+            <hr class="short" />
+            <h6 class="h5">Further Reading</h6>
+            <p>Stanford Encyclopedia of Philosophy</p>
+          </div>
+          <div class="tab-pane fade" id="introphil">
+            <p class="content-title">Introduction to Philosophy</p>
+            <h4>An Introduction to "Big Questions" in philosophy, including what is the relationship between mind and body? Do we have free will? What is justice?</h4>
+            <hr class="bold" />
+            <div class="arrow-down"></div>
+            <h6 class="h5">Syllabus</h6>
+          </div>
+          <div class="tab-pane fade" id="introethics">
+            <p class="content-title">Introduction to Ethics</p>
+            <h4>An Introduction to the philosophical study of morality, focusing on issues in normative ethics - what makes right acts right? - as well as applied ethical issues - what is the moral status of non-human animals?</h4>
+            <hr class="bold" />
+            <div class="arrow-down"></div>
+            <h6 class="h5">Syllabus</h6>
+          </div>
+          <div class="tab-pane fade" id="medethics">
+            <p class="content-title">Medical Ethics</p>
+            <h4>This course focuses on ethical issues that arise in medicine and medical practice, with particular emphasis on the sorts of issues actual medical practitioners face.</h4>
+            <hr class="bold" />
+            <div class="arrow-down"></div>
+            <h6 class="h5">Syllabus</h6>
+          </div>
+          <div class="tab-pane fade" id="phillaw">
+            <p class="content-title">Philosophy of Law</p>
+            <h4>A thorough investigation of the philosophical underpinnings of the law and legal systems. Particular focus on big questions like What is Law? How ought judges interpret legal texts? Do we have an obligation to follow the law?</h4>
+            <hr class="bold" />
+            <div class="arrow-down"></div>
+            <h6 class="h5">Syllabus</h6>
+          </div>
+          <div class="tab-pane fade" id="compphil">
+            <p class="content-title">Computers and Philosophy</p>
+            <h4>Computers and the internet raise all sorts of philosophical issues - advanced computing makes us question the nature of intelligence, the collaborative tools of the internet allow us to consider the necessity of various social institutions. This course is often organized around those relevant issues that the students find of particular interest.</h4>
+            <hr class="bold" />
+            <div class="arrow-down"></div>
+            <h6 class="h5">Syllabus</h6>
           </div>
         </div>
-      <!-- /tabs -->
-        <div class="col-md-1">
-        </div>
       </div>
+      <div class="col-md-2"></div>
     </div>
-    </div>
-    
+  </div>
   <!-- End Content -->
 
   <!-- Sticky footer -->
