--- a/academic/research.html
+++ b/academic/research.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marcus Schultz-Bergin :: Research</title>
+    <title>In the Cave :: Research</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Marcus Schultz-Bergin</a>
+          <a class="navbar-brand" href="index.html">In the Cave</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -53,31 +53,52 @@
       <div class="row">
 
       <!-- Navigation Buttons -->
-      <div class="col-md-2 no-pad">
-        <ul class="nav nav-pills nav-stacked" id="myTabs">
-          <li class="active"><a href="#pub" data-toggle="pill">Published Work</a></li>
-          <li><a href="#progress" data-toggle="pill">Work in Progress</a></li>
-          <li><a href="#program" data-toggle="pill">Research Program</a></li>
+      <div class="col-md-2">
+        <ul class="nav nav-tabs nav-stacked" id="myTabs">
+          <li class="active"><a href="#pub" data-toggle="tab">Published Work</a></li>
+          <li><a href="#progress" data-toggle="tab">Work in Progress</a></li>
+          <li><a href="#program" data-toggle="tab">Research Program</a></li>
         </ul>
       </div>
 
       <!-- Content -->
-      <div class="col-md-10 no-pad">
+      <div class="col-md-8">
         <div class="tab-content">
-          <div class="tab-pane active" id="pub">
-            <p class="content-title">Published Works</p>
+          <div class="tab-pane fade in active" id="pub">
+            <p class="content-title">Published Work</p>
             <h4>Here are my published works available for download, please cite final published version</h4>
+            <hr class="bold" />
+            <div class="arrow-down"></div>
+            <h6 class="h5"><a href="docs/aiemm.pdf">Aristotle's Intermittently Existing Masked Man</a></h6>
+            <p class="justified">Aristotle’s Theory of Accidental Compounds arises out of a need to make sense of a paradox of reference. This theory has been taken by multiple commentators as giving ontological status to the so-called “kooky objects”. While some admit that the implications of such a doctrine are extreme, effectively annihilating entities whenever a substance sheds an accidental property, they have failed to explore the implications when the substance reclaims the same accidental property. This article argues that Aristotle’s theory necessarily leads to the intermittent existence of the accidental compounds.</p>
+            <hr class="short" />
+            <h6 class="h5"><a href="http://www.clayton.edu/Portals/688/philosophy/sepc-proceedings-v4.pdf">Exorcising Plato's Homunculi</a></h6>
+            <p class="justified">A major component of Platonic theory, as espoused in the Republic, is the division of the human soul into three distinct parts. Despite the initial clarity of Plato’s theory of the tripartite soul, many commentators have put forth the committee thesis, a view which argues that for his position to be consistent with other views put forth in the Republic his theory of the soul can contain no fewer than nine distinct parts, as the three parts Plato outlines are reduplicated into each of those three parts, creating what has been called the homunculus problem. Multiple justifications have been given for this move, and by exploring the argument from analogy in part I, the argument against perverted reason in part II and the argument from rational assent in part III, I will contend that all are motivated by a misreading of key components of the Republic and that the underlying inconsistency can be readily dealt with simply in the context of a three part soul. After refuting each of these arguments for the committee thesis, I will conclude by describing and building up a defense of the strong unity thesis, which makes sense of the seeming tensions in the Republic while maintaining no more than a tripartite soul. </p>
+            <hr class="short" />
+            <h6 class="h5"><a href="docs/bettersense.pdf">Making Better Sense of Animal Disenhancement: A Reply to Henschke</a></h6>
+            <p class="justified">In "Making Sense of Animal Disenhancement" Adam Henschke provides a framework for fully understanding and evaluating animal disenhancement. His conclusion is that animal disenhancement is neither morally nor pragmatically justified. In this paper I argue that Henschke misapplies his own framework for understanding disenhancement, resulting in a stronger conclusion than is justified. In diagnosing his mistep, I argue that the resources he has provided us, combined with my refinements, results in two new avenues for inquiry: an application of concepts from political theory to disenhancement, and an inquiry into the mode of valuation that underlies industrial animal agriculture and disenhancement proposals.</p>
           </div>
-          <div class="tab-pane" id="progress">
+          <div class="tab-pane fade" id="progress">
             <p class="content-title">Work in Progress</p>
             <h4>Below are drafts of some of my current work. Please do not cite without permission.</h4>
+            <hr class="bold" />
+            <h6 class="h5"><a href="docs/rightsandwrongs.pdf">The Rights of Wrongs of Animal Diminishment</a></h6>
+            <p>ABSTRACT</p>
+            <hr class="short" />
+            <h6 class="h5"><a href="docs/naturaldiminished.pdf">The Natural and the Diminished: Is Diminishment Intrinsically Wrong?</a></h6>
+            <p>ABSTRACT</p>
+            <hr class="short" />
+            <h6 class="h5"><a href="docs/justdiminishment.pdf">Just Diminishment: Can Politics succeed where morality has failed?</a></h6>
+            <p>ABSTRACT</p>
           </div>
-          <div class="tab-pane" id="program">
+          <div class="tab-pane fade" id="program">
             <p class="content-title">Research Program</p>
             <h4>My Current Research Program and my planned Research Trajectory</h4>
+            <hr class="bold" />
           </div>
         </div>
       </div>
+      <div class="col-md-2"></div>
 
 </div>
     </div>
