--- a/academic/research.html
+++ b/academic/research.html
@@ -82,6 +82,7 @@
             <p class="content-title">Work in Progress</p>
             <h4>Below are drafts of some of my current work. Please do not cite without permission.</h4>
             <hr class="bold" />
+            <div class="arrow-down"></div>
             <h6 class="h5"><a href="docs/rightsandwrongs.pdf">The Rights of Wrongs of Animal Diminishment</a></h6>
             <p>ABSTRACT</p>
             <hr class="short" />
@@ -95,6 +96,7 @@
             <p class="content-title">Research Program</p>
             <h4>My Current Research Program and my planned Research Trajectory</h4>
             <hr class="bold" />
+            <div class="arrow-down"></div>
           </div>
         </div>
       </div>
